[gd_scene load_steps=3 format=3 uid="uid://noie5pq3tygd"]

[ext_resource type="Theme" uid="uid://bunuwhfnqwadq" path="res://ui/default_theme.tres" id="1_50142"]
[ext_resource type="Script" uid="uid://ui4t5dhggxj6" path="res://ui/pause_menu.gd" id="2_ejwgg"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_50142")
script = ExtResource("2_ejwgg")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.564706)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 211.0
offset_top = 215.5
offset_right = 611.0
offset_bottom = 383.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ResumeGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Resume Game"

[node name="HowToPlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "How To Play"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Options"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Return To Main Menu"
